--- a/grocery/grocery1.html
+++ b/grocery/grocery1.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Categories</a></li>
+                <li><a href="category.html">Categories</a></li>
                 <li><a href="#">My Cart</a></li>
                 <li><a href="login.html">Login</a></li>  
             </ul>
